# gaming-console

./: CMakeLists.txt  README.md
include/: hw_init.h  irq_handler.h  joystick.h  led_test.h  mp3_module.h
include/lib_headers/: LCD_1in83.h
lib_ref/: gui_paint.c
src/: CMakeLists.txt  hw_init.c  irq_handler.c  joystick.c  led_test.c  main.c  mp3_module.c
